@@ -20,11 +20,11 @@ dependencies {
   implementation "com.google.inject.extensions:guice-assistedinject:${guiceVersion}"
   implementation "com.google.inject.extensions:guice-servlet:${guiceVersion}"
   implementation 'com.google.truth:truth:1.1.3'
-  implementation 'joda-time:joda-time:2.10.10'
+  implementation 'joda-time:joda-time:2.10.13'
   api 'net.jcip:jcip-annotations:1.0'
-  implementation 'org.springframework:spring-core:5.3.9'
+  implementation 'org.springframework:spring-core:5.3.12'
   compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
-  implementation 'org.checkerframework:checker-qual:3.18.0'
+  implementation 'org.checkerframework:checker-qual:3.19.0'
 
   implementation 'junit:junit:4.13.1'
   implementation 'org.testng:testng:7.4.0'
@@ -36,8 +36,8 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
   options.compilerArgs << '-Xlint:none'
   options.encoding = 'UTF-8'
-  if (it.name == 'classesJava14') {
-    options.release = 16
+  if (it.name == 'classesJava17') {
+    options.release = 17
   } else if (it.name == 'classesJava11') {
     options.release = 11
   } else if (it.name != 'compileJava') {
@@ -60,20 +60,19 @@ tasks.named('javadoc', Javadoc).configure {
 
 def jvmVersion = JavaVersion.current()
 def classesJava8 = tasks.register('classesJava8', JavaCompile) {
-  destinationDir = file("$buildDir/classes/java/java8")
+  destinationDirectory.set(file("$buildDir/classes/java/java8"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java8')
 }
 
 def classesJava11 = tasks.register('classesJava11', JavaCompile) {
-  destinationDir = file("$buildDir/classes/java/java11")
+  destinationDirectory.set(file("$buildDir/classes/java/java11"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java11')
 }
 
-def classesJava14 = tasks.register('classesJava14', JavaCompile) {
-  options.compilerArgs.add('--enable-preview')
-  destinationDir = file("$buildDir/classes/java/java14")
+def classesJava17 = tasks.register('classesJava17', JavaCompile) {
+  destinationDirectory.set(file("$buildDir/classes/java/java14"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java14')
 }
@@ -85,10 +84,10 @@ tasks.named('classes').configure {
   } else {
     println "skip tests for Java 11 features"
   }
-  if (jvmVersion.isCompatibleWith(JavaVersion.VERSION_14)) {
-    dependsOn classesJava14
+  if (jvmVersion.isCompatibleWith(JavaVersion.VERSION_17)) {
+    dependsOn classesJava17
   } else {
-    println "skip tests for Java 14 features"
+    println "skip tests for Java 17 features"
   }
 }
 
